# search-engine

./: .gitignore  Dockerfile  README.md  build_eval_corpus.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/eval/: bm25_baseline.json
data/eval_v2/: qrels.test.tsv  qrels.train.tsv  queries.test.tsv  queries.train.tsv
src/eval/: evaluate.py  msmarco.py
src/indexer/: indexer.py
src/reranker/: __init__.py  lightgbm_ranker.py
src/retrieval/: retriever.py
src/serving/: app.py
tests/: locustfile.py  test_eval_pipeline.py  test_indexer.py  test_reranker.py  test_retiever.py  test_serving.py
