[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "search-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rank-bm25>=0.2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "lightgbm>=4.3",
    "sentence-transformers>=3.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "orjson>=3.10",
    "structlog>=24.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "locust>=2.29",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true